--- a/CSS/style.css
+++ b/CSS/style.css
@@ -85,3 +85,24 @@ color: white;
 .row{
     margin-right: 5px;
 }
+
+.categorias{
+    border-radius: 0% !important;
+}
+
+#botonBorrar , #botonResumen {
+    background-color: #96c93e;
+    border-color: #96c93e;
+}
+
+#botonResumen:hover , #botonEnviar:hover{
+    border: 1px solid rgb(19, 156, 19);
+    background-color: rgb(19, 156, 19);
+    color: white;
+}
+
+#botonBorrar:hover{
+    border: 1px solid rgb(216, 34, 34);
+    background-color: rgb(216, 34, 34);
+    color: white;
+}
